🐛 FIXED: Show Pacient Food Details Improved

--- a/templates/e_add_receta.html
+++ b/templates/e_add_receta.html
@@ -167,6 +167,27 @@
                         </div>
                     </div>
                 </div>
+
+                    <!-- Modal de Éxito -->
+                <div class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="successModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header bg-success text-white">
+                                <h5 class="modal-title" id="successModalLabel">¡Comida Asignada!</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                La comida se le ha asignado correctamente al paciente.
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
 
             <!-- Footer -->
@@ -238,6 +259,26 @@
                 this.closest('.badge').remove();
             });
         });
+
+        $(document).ready(function() {
+                $('form').on('submit', function(e) {
+                    e.preventDefault();
+                    var form = $(this);
+                    
+                    $.ajax({
+                        type: 'POST',
+                        url: form.attr('action'),
+                        data: form.serialize(),
+                        success: function(response) {
+                            $('#successModal').modal('show');
+                            form.trigger('reset'); // Limpiar el formulario
+                        },
+                        error: function(xhr) {
+                            alert('Error: ' + xhr.responseText);
+                        }
+                    });
+                });
+            });
     </script>
 </body>
 {% endblock %}
